force-app/main/default/objects/Apttus__IDEMapFieldProvision__c/Apttus__IDEMapFieldProvision__c.object-meta.xml
<CustomObject>
    <description>Holds the mapping between IDE provision record type and agreement fields</description>
    <label>IDE Map Field Provision</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Map Field Provisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>