force-app/main/default/objects/Apttus__IDEMapFieldProvision__c/fields/Apttus__BaseObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus__BaseObject__c</fullName>
    <description>Base object for which field is getting mapped</description>
    <externalId>true</externalId>
    <inlineHelpText>Please provide base object for which field is getting mapped</inlineHelpText>
    <label>Base Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>