force-app/main/default/objects/Apttus__IDEMapFieldProvision__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>Additional information for reference</description>
    <inlineHelpText>Please add additional information for reference</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>