force-app/main/default/objects/Apttus__IDEMapFieldProvision__c/fields/Apttus__MetaDataFieldId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__MetaDataFieldId__c</fullName>
    <description>Meta Data Field</description>
    <inlineHelpText>Please provide Meta Data Field</inlineHelpText>
    <label>Meta Data Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>